Fix: Removing this CSS declaration fixes a bug that made the content-type selector in the editor dialog unusable on Safari.

--- a/structr-ui/src/main/resources/structr/css/main.css
+++ b/structr-ui/src/main/resources/structr/css/main.css
@@ -1557,10 +1557,6 @@ button.action.disabled:hover {
 	padding: 0;
 }
 
-.dialogTextWrapper {
-	overflow-y: auto;
-}
-
 .dialogText textarea {
 	width: 98%;
 	margin-top: 0;
